updated the user matrix

--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -49,6 +49,10 @@
                                             <input type='checkbox' class='form-control hasInvoice' id='hasInvoice' name='hasInvocie' />
                                         </div>
                                         <div class='form-group'>
+                                                <label>Is HAZMAT</label>
+                                                <input type='checkbox' class='form-control hasInvoice' id='isHazmat' name='isHazMat' />
+                                            </div>
+                                        <div class='form-group'>
                                             <label>Upload Invocie</label>
                                             <input type='file' class='form-control invFile' id='invFile' name='invFile' />
                                         </div>
