--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -46,7 +46,7 @@
                                             <input type='hidden' class='customerId' id='customerId' />
                                         </div>
                                         <div class='form-group'>
-                                            <label>Shipper </label><br/>
+                                            <label>Shipper  <a href='#' data-target="#findshipper" data-toggle="modal">Add New Shipper</a></label><br/>
                                             <select id="pick-shipper" class='form-control' style='width:90%;'>
                                                     <option>Select Shipper</option>
                                                     <%for(var i =0; i < shipperListing.length;i++){%>
@@ -163,7 +163,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title" id="exampleModalLabel2">Find Shipper</h2>
+                <h2 class="modal-title" id="exampleModalLabel2">Add Shipper</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -172,18 +172,27 @@
                 <div class='form-group' >
                 <input type='text' class='form-control' id='search' name='search' placeholder="Enter Name " > 
             </div>
-               <table id='shipperTable' class='table-bordered table' style='display:none'>
-                   <tr>
-                       <td>PMB</td>
-                       <td>Customer Name</td>
-                   </tr>
-
-                   <tbody id="customerlisting"></tbody>
-               </table>
                
+              <div class='form-group' >
+                <label> Name</label>
+                <input type ='text' class='form-control' placeholder="Name"/>
+              </div>
+              <div class='form-group' >
+                <label> Address</label>
+                <input type ='text' class='form-control' placeholder="Address"/>
+              </div>
+              <div class='form-group' >
+                <label> City</label>
+                <input type ='text' class='form-control' placeholder="City"/>
+              </div>
+              <div class='form-group' >
+                <label> State</label>
+                <input type ='text' class='form-control' placeholder="State"/>
+              </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary btn-success" data-dismiss="modal">Create</button>
                 
             </div>
         </div>
@@ -265,9 +274,15 @@
                         <label>Weight</label>
                         <input type='text' class='form-control weight ' id='weight' name='weight' />
                     </div>
+                  
                     <div class='form-group'>
                         <label>Dimensions</label>
-                        <input type='text' class='form-control dimensions ' id='dimensions' name='dimensions' />
+                        
+                        <div class='row'>
+                            <div class='col-md-4'><input type='text' class='form-control dimensions ' id='W' placeholder='W' /></div>
+                            <div class='col-md-4'><input type='text' class='form-control dimensions ' id='H' placeholder='H' /></div>
+                            <div class='col-md-4'><input type='text' class='form-control dimensions ' id='L' placeholder='L' /></div>
+                        </div>
                     </div>
                    
                 </form>
