--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -51,7 +51,7 @@
                             <div class='col-md-3'>
                             <div class="col-lg-12 col-md-12 col-sm-12">
 													<p class="text-uppercase small">
-														<strong>Date:</strong> <br/><%=moment.unix(manifest.dateCreated).format("dddd, LL") %>
+														<strong>Date:</strong> <br/><%=manifest.dateCreated %>
                                     </p>
                                     <address class='small'>
                                         
