Updated the saving of the packages

--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -113,7 +113,7 @@
                                        
                                        
                                         <a id="save_awb" href="javascript:void(0)" class="btn btn-small btn-info ">Save AWB</a>
-                                        <a id="update_awb" href="#ready-popup" class="btn btn-small btn-info open-popup-link " style='display:none;'>Update Awb</a>
+                                        <a id="update_awb"  class="btn btn-small btn-info  " style='display:none; color:white;'>Update Awb</a>
                                         <a id="add_package" href="#ready-popup" class="btn btn-small btn-info open-popup-link " style='display:none;'>Add Package</a>
                                         <button type='button'  class="btn btn-small btn-info new-awb " style='display:none;'>New AWB</button>
                                         <div class="separator-solid"></div>
